# subject-view-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  nixpacks.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: postCreateCommand.sh
migrator/: Cargo.toml
migrator/src/: lib.rs  main.rs
migrator/src/subject/: m20240717_223020_subjects.rs  mod.rs  model.rs
migrator/src/user/: m20240717_203614_users_and_session.rs  mod.rs  model.rs
orbit/: Cargo.toml
orbit/src/: docs.rs  lib.rs
orbit/src/routes/: mod.rs
orbit/src/routes/account/: login.rs  mod.rs
orbit/src/routes/index/: entry.rs  mod.rs
orbit/src/routes/subject/: create_subject.rs  delete_subject.rs  list_subject.rs  mod.rs
orbit/src/routes/users/: create_user.rs  me.rs  mod.rs
orbit/templates/: index.tera
quark/: Cargo.toml
quark/src/: lib.rs
quark/src/derive/: rocket.rs
quark/src/impl/postgres/: mod.rs  pool.rs
quark/src/impl/postgres/subjects/: subject.rs
quark/src/impl/postgres/users/: account.rs  user.rs
quark/src/models/: mod.rs
quark/src/models/subjects/: subject.rs
quark/src/models/users/: session.rs  user.rs
quark/src/util/: result.rs
src/: main.rs
