[package]
name = "migrator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migrator"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.10"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]