[package]
name = "subject-view-orbit"
version = "0.1.0"
authors = ["Maykol Laguna <lagunamichael2@outlook.com>"]
edition = "2021"
publish = false

[dependencies]

# Async
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.73" }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
chrono = "0.4.31"

# Web
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_cors = "0.6.0"

# serde
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }

tokio = "1.20.0"
dotenvy = "0.15"

# Utility
lru = "0.12.1"
url = "2.2.2"
log = "0.4.11"
dotenv = "0.15.0"
dashmap = "5.2.0"
linkify = "0.10.0"
once_cell = "1.17.1"
env_logger = "0.11.0"

# ID
ulid = "1.1.2"
nanoid = "0.4.0"

# Spec Generation
schemars = "0.8.16"
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket", "vendored"] }
utoipa-redoc = { version = "4.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "4.0.0", features = ["rocket"] }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }

[dependencies.sea-orm-rocket]
version = "0.5.1"